tests/parsing/smtlib/v2.7/errors/154_symbol_list_1.smt2
(set-logic ALL)
(define-sort foo (x _))
